Adding write-up, and diagram

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
 </head>
 <body>
-    <h1>They see me graphing</h1>
+    <h1>They see me graphin'</h1>
     <svg class="barchart"></svg>
     <svg class="scatter"></svg>
 
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         var GBMUS_SERVER = 'https://dcc.icgc.org';
         var GBMUS_PATH = '/api/v1/projects/GBM-US/mutations';
-        var GBMUS_PARAMS = '?field=id,mutation,type,chromosome,start,end&size=100&order=desc'
+        var GBMUS_PARAMS = '?field=id,mutation,type,chromosome,start,end&size=100&order=desc';
 
         var dataObj = new Object();
 
